tests/tooling/fixtures/native/recovery/positive/id_annotation_alias_signature.objc3
module IdAnnotationAliasSignature;

fn choose(flag: bool, when_true: id, when_false: id) -> id {
  if (flag) {
    return when_true;
  }
  return when_false;
}

fn main() -> i32 {
  return choose(true, 41, 9) + 1;
}
