tests/tooling/fixtures/native/recovery/negative/negative_assignment_update_bool_target.objc3
// Expected diagnostic code(s): O3S206.
module NegativeAssignmentUpdateBoolTarget;

fn main() -> i32 {
  let flag = true;
  flag++;
  return 0;
}